fix: give higher z-index to an active window

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -35,6 +35,7 @@ body {
 
 .window.is-active {
 	outline: 1px solid #2bcbdd;
+	z-index: 4;
 }
 
 .window-titlebar {
